--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
-    "@azure/functions": "^4.0.0-alpha.7"
+    "@azure/functions": "^4.0.0-alpha.7",
+    "mysql2": "^3.2.3"
   },
   "devDependencies": {
     "@types/node": "^18.x",
